# whisper.cpp

./: .gitignore  CMakeLists.txt  compile_debug_x64.bat
examples/stream/: CMakeLists.txt  KeySimulator.cpp  KeySimulator.h  audio.h  stream.cpp
